fix spacing and info in details popup

--- a/scss/components/_citationDialog.scss
+++ b/scss/components/_citationDialog.scss
@@ -978,4 +978,12 @@
 			}
 		}
 	}
+	#itemDetails .popup {
+		.details-header .description {
+			margin-top: 4px;
+		}
+		.buttons {
+			margin-top: 16px;
+		}
+	}
 }
